# bAvila_ReconocimientoLetrasAbecedarioYoloV11

./: CMakeLists.txt  README.txt  run_principal.sh
models/: classes2.txt
src/: principal.cpp
